chore(config): Enable code lens references

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
   "deno.cacheOnSave": true,
   "deno.enable": true,
   "deno.unstable": false,
+  "deno.codeLens.references": true,
   "editor.codeActionsOnSave": {
     "source.fixAll": true,
     "source.organizeImports": true
